--- a/desafio02/styles/scss/_home-screen.scss
+++ b/desafio02/styles/scss/_home-screen.scss
@@ -67,7 +67,7 @@ header {
             width: 32.7rem;
             height: 100%;
 
-            
+            padding: 1rem;
 
             border: none;
             outline: none;
@@ -179,7 +179,7 @@ header {
         .combo-item {
             display: flex;
             flex-direction: column;
-            align-items: center;
+            align-items: flex-start;
 
            
             width: 15.2rem;
@@ -196,6 +196,7 @@ header {
             }
 
             .span-fruit {
+                align-self: center;
                 
                 &::before {
                     content: '';
@@ -270,7 +271,7 @@ header {
     }
 
     nav {
-        margin-top: 4rem;
+        margin-top: .4rem;
         margin-bottom:2.4rem;
         display: flex;
 
