--- a/desafio02/styles/css/styles.css
+++ b/desafio02/styles/css/styles.css
@@ -100,7 +100,7 @@ section .text-continue-container .btn-container a button {
 
 @media screen and (min-width: 768px) {
   section .img-container {
-    height: 40rem;
+    height: 32rem;
   }
   section .img-container img {
     width: 80%;
@@ -558,6 +558,25 @@ header .basket-box {
   border-bottom: 0.2rem solid #FFA451;
 }
 
+@media screen and (min-width: 1024px) {
+  .responsive {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .responsive .foods-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
 section {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -860,6 +879,48 @@ section .add-basket-container .basket-btn-container a button {
   color: #FFFFFF;
 }
 
+@media screen and (min-width: 768px) {
+  .back-container .salad-hero {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 10rem;
+  }
+  .add-basket-container .salad-description {
+    width: 100vw;
+  }
+  .add-basket-container .salad-description p {
+    width: 60em;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .back-container .salad-hero {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 15rem;
+  }
+}
+
+@media screen and (max-height: 812px) {
+  .back-container .salad-hero {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 10rem;
+  }
+}
+
+@media screen and (max-width: 812px) and (max-height: 620px) {
+  section .add-basket-container h1 {
+    margin-top: 2rem;
+  }
+  section .add-basket-container .salad-ingredients {
+    margin-top: 1.2rem;
+  }
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -932,9 +993,6 @@ a:visited {
 }
 
 @media screen and (min-width: 768px) {
-  html {
-    font-size: 72.5%;
-  }
   body {
     max-width: 100vw;
   }
