--- a/desafio02/styles/scss/_add-to-basket.scss
+++ b/desafio02/styles/scss/_add-to-basket.scss
@@ -292,3 +292,63 @@ section {
         }
     }
 }
+
+@media screen and (min-width: 768px) {
+
+        .back-container {
+            .salad-hero {
+                display: flex;
+                width: 10rem;
+             }
+            }
+
+            .add-basket-container {
+
+               
+             
+                .salad-description {
+                    width: 100vw;
+                  
+                    p {
+                        
+                        width: 60em;
+                    }
+                }
+            }
+         
+}
+
+@media screen and (min-width: 1024px) {
+
+    .back-container {
+        .salad-hero {
+            display: flex;
+            width: 15rem;
+         }
+        }
+}
+
+@media screen and (max-height: 812px) {
+
+    .back-container {
+        .salad-hero {
+            display: flex;
+            width: 10rem;
+         }
+        }
+}
+
+@media screen and (max-width: 812px) and (max-height: 620px) {
+
+    section .add-basket-container h1 {
+        margin-top: 2rem;
+    }
+    section .add-basket-container .salad-ingredients {
+        margin-top: 1.2rem;
+    }
+}
+
+
+
+
+
