--- a/desafio02/styles/css/styles.css
+++ b/desafio02/styles/css/styles.css
@@ -107,6 +107,33 @@ section .text-continue-container .btn-container a button {
   }
 }
 
+@media screen and (max-height: 768px) {
+  section .img-container {
+    height: 28rem;
+  }
+  section .img-container span {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  section .img-container img {
+    width: 70%;
+  }
+}
+
+@media screen and (min-height: 640px) {
+  body {
+    overflow: hidden;
+  }
+}
+
 .animation-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -577,7 +604,13 @@ header .basket-box {
   }
 }
 
-section {
+@media screen and (max-height: 812px) {
+  body {
+    overflow-y: scroll;
+  }
+}
+
+.basket-section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -590,7 +623,7 @@ section {
           flex-direction: column;
 }
 
-section .back-container {
+.basket-section .back-container {
   height: 32vh;
   width: 100%;
   display: -webkit-box;
@@ -609,13 +642,13 @@ section .back-container {
   background-color: #FFA451;
 }
 
-section .back-container div {
+.basket-section .back-container div {
   -ms-flex-item-align: start;
       align-self: flex-start;
   margin-left: 2.4rem;
 }
 
-section .back-container div a {
+.basket-section .back-container div a {
   cursor: pointer;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -635,18 +668,18 @@ section .back-container div a {
   gap: 0.4rem;
 }
 
-section .back-container div a span {
+.basket-section .back-container div a span {
   font-weight: 400;
   font-size: 1.2rem;
   line-height: 1.6rem;
   color: #27214D;
 }
 
-section .back-container .salad-hero {
+.basket-section .back-container .salad-hero {
   margin-top: 1rem;
 }
 
-section .add-basket-container {
+.basket-section .add-basket-container {
   height: 65vh;
   width: 100%;
   background-color: #FFFFFF;
@@ -664,7 +697,7 @@ section .add-basket-container {
   border-top-right-radius: 1.2rem;
 }
 
-section .add-basket-container h1 {
+.basket-section .add-basket-container h1 {
   margin-top: 4rem;
   margin-left: 2.4rem;
   font-weight: 500;
@@ -672,7 +705,7 @@ section .add-basket-container h1 {
   color: #27214D;
 }
 
-section .add-basket-container .salad-quantity {
+.basket-section .add-basket-container .salad-quantity {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -684,18 +717,18 @@ section .add-basket-container .salad-quantity {
   margin-right: 2.4rem;
 }
 
-section .add-basket-container .salad-quantity .salad-amount {
+.basket-section .add-basket-container .salad-quantity .salad-amount {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   gap: 2.4rem;
 }
 
-section .add-basket-container .salad-quantity .salad-amount span {
+.basket-section .add-basket-container .salad-quantity .salad-amount span {
   font-size: 2.4rem;
 }
 
-section .add-basket-container .salad-quantity .salad-amount .add-span {
+.basket-section .add-basket-container .salad-quantity .salad-amount .add-span {
   width: 2.4rem;
   height: 2.4rem;
   border-radius: 2.4rem;
@@ -714,25 +747,25 @@ section .add-basket-container .salad-quantity .salad-amount .add-span {
   cursor: pointer;
 }
 
-section .add-basket-container .salad-quantity .salad-amount .add-span img {
+.basket-section .add-basket-container .salad-quantity .salad-amount .add-span img {
   width: 1.6rem;
   height: 1.6rem;
 }
 
-section .add-basket-container .salad-quantity .salad-price img {
+.basket-section .add-basket-container .salad-quantity .salad-price img {
   width: 2rem;
   height: 1.6rem;
   fill: #27214D;
   margin-right: 0.4rem;
 }
 
-section .add-basket-container .salad-quantity .salad-price span {
+.basket-section .add-basket-container .salad-quantity .salad-price span {
   font-size: 2.4rem;
   font-weight: 500;
   font-size: 2.4rem;
 }
 
-section .add-basket-container .salad-ingredients {
+.basket-section .add-basket-container .salad-ingredients {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -747,7 +780,7 @@ section .add-basket-container .salad-ingredients {
   margin-left: 2.4rem;
 }
 
-section .add-basket-container .salad-ingredients h2 {
+.basket-section .add-basket-container .salad-ingredients h2 {
   margin-bottom: 1.2rem;
   color: #27214D;
   font-size: 2rem;
@@ -755,14 +788,14 @@ section .add-basket-container .salad-ingredients h2 {
   font-weight: 400;
 }
 
-section .add-basket-container .salad-ingredients h2::after {
+.basket-section .add-basket-container .salad-ingredients h2::after {
   content: '';
   width: 56px;
   display: block;
   border-bottom: 0.2rem solid #FFA451;
 }
 
-section .add-basket-container .salad-ingredients .list-ingredients ul {
+.basket-section .add-basket-container .salad-ingredients .list-ingredients ul {
   -ms-flex-flow: wrap;
       flex-flow: wrap;
   display: -webkit-box;
@@ -779,7 +812,7 @@ section .add-basket-container .salad-ingredients .list-ingredients ul {
   list-style: none;
 }
 
-section .add-basket-container .salad-ingredients .list-ingredients ul li {
+.basket-section .add-basket-container .salad-ingredients .list-ingredients ul li {
   -webkit-box-shadow: 0 2px 1px rgba(0, 0, 0, 0.05), 0 0 1px rgba(0, 0, 0, 0.25);
           box-shadow: 0 2px 1px rgba(0, 0, 0, 0.05), 0 0 1px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
@@ -798,31 +831,31 @@ section .add-basket-container .salad-ingredients .list-ingredients ul li {
   transition: 0.3s ease-in-out;
 }
 
-section .add-basket-container .salad-ingredients .list-ingredients ul li:hover {
+.basket-section .add-basket-container .salad-ingredients .list-ingredients ul li:hover {
   background-color: #FFA451;
 }
 
-section .add-basket-container .salad-ingredients .list-ingredients ul li span {
+.basket-section .add-basket-container .salad-ingredients .list-ingredients ul li span {
   padding: 0.8rem 1.6rem;
   font-size: 1.4rem;
   line-height: 1.6rem;
   color: #333333;
 }
 
-section .add-basket-container .salad-description {
+.basket-section .add-basket-container .salad-description {
   margin-top: 3.4rem;
   margin-left: 2.4rem;
   width: 30.2rem;
 }
 
-section .add-basket-container .salad-description p {
+.basket-section .add-basket-container .salad-description p {
   font-weight: 300;
   font-size: 1.4rem;
   line-height: 2.4rem;
   color: #333333;
 }
 
-section .add-basket-container .basket-btn-container {
+.basket-section .add-basket-container .basket-btn-container {
   margin-top: 4.3rem;
   margin-left: 2.4rem;
   margin-right: 2.4rem;
@@ -837,7 +870,7 @@ section .add-basket-container .basket-btn-container {
           justify-content: space-between;
 }
 
-section .add-basket-container .basket-btn-container span {
+.basket-section .add-basket-container .basket-btn-container span {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -855,16 +888,16 @@ section .add-basket-container .basket-btn-container span {
   transition: .3s ease-in-out;
 }
 
-section .add-basket-container .basket-btn-container span:hover {
+.basket-section .add-basket-container .basket-btn-container span:hover {
   background-color: #FFF7F0;
 }
 
-section .add-basket-container .basket-btn-container a {
+.basket-section .add-basket-container .basket-btn-container a {
   width: 21.9rem;
   height: 5.6rem;
 }
 
-section .add-basket-container .basket-btn-container a button {
+.basket-section .add-basket-container .basket-btn-container a button {
   width: 100%;
   height: 100%;
   background-color: #FFA451;
@@ -904,11 +937,32 @@ section .add-basket-container .basket-btn-container a button {
 }
 
 @media screen and (max-height: 812px) {
-  .back-container .salad-hero {
+  .basket-section .back-container {
+    height: 20rem;
+  }
+  .basket-section .back-container .salad-hero {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     width: 10rem;
+  }
+}
+
+@media screen and (max-height: 667px) {
+  .basket-section .back-container {
+    height: 15rem;
+  }
+  .basket-section .back-container .salad-hero {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 7rem;
+  }
+}
+
+@media screen and (min-height: 640px) {
+  body {
+    overflow: hidden;
   }
 }
 
@@ -935,7 +989,6 @@ html {
 body,
 input {
   font-family: "TT Norms Pro", sans-serif;
-  overflow: hidden;
 }
 
 a {
