--- a/desafio02/styles/scss/_add-to-basket.scss
+++ b/desafio02/styles/scss/_add-to-basket.scss
@@ -1,9 +1,11 @@
 @import 'variables';
 
-section {
+.basket-section {
     display: flex;
     justify-content: center;
     flex-direction: column;
+
+   
 
     .back-container {
         height: 32vh;
@@ -15,9 +17,6 @@ section {
         flex-direction: column;
 
         background-color: $primary-color;
-
- 
-
 
         div {
             align-self: flex-start;
@@ -329,13 +328,38 @@ section {
 }
 
 @media screen and (max-height: 812px) {
-
+.basket-section {
     .back-container {
+        height: 20rem;
+        
         .salad-hero {
             display: flex;
             width: 10rem;
+
          }
         }
+    }
+}
+
+@media screen and (max-height:667px) {
+    .basket-section {
+        .back-container {
+            height: 15rem;
+            
+            .salad-hero {
+                display: flex;
+                width: 7rem;
+    
+             }
+            }
+        }
+}
+
+@media screen and (min-height: 640px) {
+    body {
+        overflow: hidden;
+        
+    }
 }
 
 @media screen and (max-width: 812px) and (max-height: 620px) {
