--- a/desafio02/styles/scss/_home-screen.scss
+++ b/desafio02/styles/scss/_home-screen.scss
@@ -272,7 +272,7 @@ header {
 
     nav {
         margin-top: .4rem;
-        margin-bottom:2.4rem;
+      
         display: flex;
 
         gap: 2.4rem;
@@ -314,7 +314,48 @@ header {
 
 @media screen and (max-height: 812px) {
     body {
-        overflow-y: scroll;
+        overflow-x: hidden;
         
     }
+}
+
+@media screen and (min-height: 740px) and (max-height: 800px) {
+
+    .foods-container .items-container .combo-item .span-fruit img {
+        width: 5rem;
+        height: 5rem;
+    
+    }
+
+}
+
+
+
+@media screen and (min-height: 640px) and (max-height: 740px) {
+    header {
+        margin-top: 1.2rem;
+       
+    }
+
+    .search-bar {
+        margin-top: .8rem;
+    }
+    
+    .filter-container {
+        margin-top: .4rem;
+    }
+
+    .responsive {
+        
+        .foods-container {
+            margin-top: 1.6rem;
+        }
+    }
+
+    .foods-container .items-container .combo-item .span-fruit img {
+        width: 5rem;
+        height: 5rem;
+    
+    }
+
 }
