Adicionando fonte secundária

--- a/desafio02/styles/scss/_variables.scss
+++ b/desafio02/styles/scss/_variables.scss
@@ -5,7 +5,7 @@ $text-color-primary: #27214D;
 $text-color-secondary: #333333;
 $text-color-terciary: #5D577E;
 
-$font: 'TT Norms Pro', sans-serif;
+$font: 'TT Norms Pro', 'Roboto' sans-serif;
 
 
 @mixin addSpan {
