--- a/desafio03/styles/scss/_work.scss
+++ b/desafio03/styles/scss/_work.scss
@@ -146,6 +146,96 @@
     display: none;
 }
 
+.bento-projects-section {
+
+    .portfolio {
+        display: flex;
+        flex-direction: column;
+
+        gap: 3.2rem;
+
+        .portfolio-item {
+            width: 31.2rem;
+            height: 58.3rem;
+
+            display: flex;
+            flex-direction: column;
+
+            .portfolio-img {
+                height: 35.5rem;
+                border-radius: 1.7rem;
+
+                img {
+                    margin-top: 3.1rem;
+                }
+
+                @include featureTag;
+
+                .featured-product {
+                    margin-left: 2.4rem;
+
+                    button {
+                        background-color: #908CFF;
+                    }
+
+                    
+                }
+            }
+
+            .portfolio-title {
+                margin-top: 2.4rem;
+                color: $dark;
+
+                font-size: 2.4rem;
+                line-height: 3.2rem;
+                font-weight: 700;
+            }
+
+            .portfolio-description {
+                margin-top: 1.6rem;
+                
+                font-weight: 400;
+                line-height: 2.8rem;
+               
+                color: $text-darkest-grey;
+
+                width: 24rem;
+                height: 8.4rem;
+
+            }
+
+            .portfolio-arrow {
+                margin-top: 2.4rem;
+
+                width: 4.8rem;
+                height: 4.8rem;
+
+                border: .2rem solid $dark;
+                border-radius: 50%;
+
+                display: flex;
+                align-items: center;
+                justify-content: center;
+               
+            }
+        }
+
+        .bento-work-contact-us {
+            margin-bottom: 4.8rem;
+
+            button {
+                @include smallBtn;
+                width: 31.3rem;
+                font-weight: 600;
+    
+               
+            
+            }
+        }
+
+    }
+}
+
 @media screen and (min-width: 768px) {
     
     .work-section .container .testimonial-list {
